[gd_scene load_steps=6 format=3 uid="uid://dej824406fjhy"]

[ext_resource type="FontFile" uid="uid://ba51hssbtoj57" path="res://ui/fonts/tinypixel.otf" id="1_cn6lm"]
[ext_resource type="Script" path="res://scripts/bug_entry.gd" id="1_rpknj"]
[ext_resource type="Texture2D" uid="uid://chpdws5sp4xu5" path="res://art/icons/remove_icon.png" id="3_ydd38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5o87"]
bg_color = Color(0, 0, 0, 0.172549)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.384314)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ycrg"]
texture = ExtResource("3_ydd38")

[node name="BugEntry" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_m5o87")
script = ExtResource("1_rpknj")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(98, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_cn6lm")
theme_override_font_sizes/font_size = 7
text = "Here is the entered text. Let's make it a little long."
autowrap_mode = 3

[node name="Button" type="Button" parent="Label"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_top = -1.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_2ycrg")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_2ycrg")
theme_override_styles/hover = SubResource("StyleBoxTexture_2ycrg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2ycrg")
theme_override_styles/normal = SubResource("StyleBoxTexture_2ycrg")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="Label/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Label/Button" to="." method="_on_button_button_up"]
[connection signal="mouse_entered" from="Label/Button" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Label/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Label/Button" to="." method="_on_button_pressed"]
